# joelpt-claude-plugins

./: .cruft.json  .gitignore  .gitmodules  .pre-commit-config-local.yaml.example  .pre-commit-config.yaml  .yamllint  CLAUDE.md  DEV_SETUP.md  README.md
plugins/search-rag/: .gitignore  CLAUDE.md  Justfile  README.md  pyproject.toml
plugins/search-rag/.claude/: settings.local.json
plugins/search-rag/.claude-plugin/: plugin.json
plugins/search-rag/hooks/: hooks.json
plugins/search-rag/skills/init-search-rag/: SKILL.md
plugins/search-rag/skills/search-rag/: SKILL.md
plugins/search-rag/src/search_rag/: __init__.py  chunker.py  config.py  config.schema.json  embedder.py  indexer.py  query.py  reranker.py  status.py  sync.py
plugins/search-rag/tst/: test_chunker.py  test_config.py  test_embedder.py  test_indexer.py  test_query.py  test_reranker.py  test_status.py  test_sync.py
plugins/the-plan/: .gitignore  .markdownlint.yaml  CLAUDE.md  Justfile  README.md  TODO.md  USER_TODO.md  pyproject.toml
plugins/the-plan/.claude-plugin/: plugin.json
plugins/the-plan/commands/: plan-approve.md  plan-status.md  plan-tend.md
plugins/the-plan/data/: APPROVAL_QUEUE.md  CLAUDE_NOTES.md  END_GOALS.md  ETHICS.md  OPEN_QUESTIONS.md  STATE.md
plugins/the-plan/data/ENABLERS/: index.md
plugins/the-plan/data/GOALS/: eg4-suffering-capacity-tool.md
plugins/the-plan/data/LOG/: 2026-05-17.md
plugins/the-plan/scripts/: __init__.py  schema_validator.py  tend_driver.py
plugins/the-plan/tst/: __init__.py  test_schema_validator.py  test_tend_driver.py
(+171 files in other folders)
