[project]
name = "search-rag"
version = "0.1.0"
description = "Local-first LanceDB RAG over project documentation, integrated with Claude Code"
requires-python = ">=3.12"
dependencies = [
    "lancedb>=0.20",
    "sentence-transformers>=3.0",
    "pyarrow>=17",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/search_rag"]

[tool.pytest.ini_options]
testpaths = ["tst"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
